GNOME Bugzilla – Bug 702679
exception hit when attempting to read an entry-view BPM column
Last modified: 2013-06-22 06:20:14 UTC
Created attachment 247275 [details] [review] patch -p0 to rb-entry-view.c to resolve this bug-report The following error was observed that crashed RB 2.98/2.99.1 Rhythmbox:ERROR:rb-entry-view.c:1320:rb_entry_view_get_column: code should not be reached Aborted I was attempting to retrieve the BPM column in python on my entry-view source self.get_column(RB.EntryViewColumn.BPM) enc is a diff I created against the latest git version of Rhythmbox that resolves this issue.
I fixed up a few other things and pushed this as commit 8dfeee2.