entry-view: allow the bpm column to be retrieved

also put the columns in the right order in various places.
patch originally from foss.freedom@gmail.com

https://bugzilla.gnome.org/show_bug.cgi?id=702679